# IDV-project

./: .gitignore  README.md  pyproject.toml
src/: data_filtering.py  data_handler.py  data_management.py  data_processing.py  eu_countries.py  index.py  main.py  read_in_data.py  test.py
