[tool.poetry]
name = "idv-project"
version = "0.1.0"
description = ""
authors = ["micsoder <michaela.x.soderholm@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
geopandas = "^0.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
